Added more meathods for the end points
