# controllers/contactsController.js
@@ -1,3 +1,5 @@
+/* eslint-disable no-unused-vars */
+/* eslint-disable no-undef */
 const mongodb = require("../data/database");
 const { ObjectId } = require("mongodb");
 
@@ -17,6 +19,8 @@ const getAllcontacts = async (req, res, next) => {
   }
 };
 
+// #swagger.tags = ['Contacts']
+// #swagger.description = 'Get contact by ID'
 const getcontactById = async (req, res, next) => {
   try {
     const contactId = new ObjectId(req.params.id);
@@ -38,7 +42,83 @@ const getcontactById = async (req, res, next) => {
   }
 };
 
+const createContact = async (req, res) => {
+  try {
+    const contact = {
+      firstName: req.body.firstName,
+      lastName: req.body.lastName,
+      email: req.body.email,
+      favoriteColor: req.body.favoriteColor,
+      birthday: req.body.birthday,
+    };
+
+    const response = await mongodb
+      .getDb()
+      .collection("contacts")
+      .insertOne(contact);
+    if (response.acknowledged) {
+      res.status(201).json(response);
+    } else {
+      res.status(500).json({ message: "Error creating contact" });
+    }
+  } catch (err) {
+    res
+      .status(500)
+      .json({ message: "Error creating contact", error: err.message });
+  }
+};
+
+const updateContact = async (req, res, next) => {
+  try {
+    const contactId = new ObjectId(req.params.id);
+    const contact = {
+      firstName: req.body.firstName,
+      lastName: req.body.lastName,
+      email: req.body.email,
+      favoriteColor: req.body.favoriteColor,
+      birthday: req.body.birthday,
+    };
+    const response = await mongodb
+      .getDb()
+      .collection("contacts")
+      .replaceOne({ _id: contactId }, contact);
+    if (response.matchedCount == 0) {
+      return res.status(404).json({ message: "Contact not found" });
+    }
+    if (response.modifiedCount > 0) {
+      res.status(200).json({ message: "Contact updated successfully" });
+    } else {
+      res.status(500).json({ message: "No changes made to contact" });
+    }
+  } catch (err) {
+    res
+      .status(500)
+      .json({ message: "Error updating contact", error: err.message });
+  }
+};
+
+const deleteContact = async (req, res, next) => {
+  try {
+    const contactId = new ObjectId(req.params.id);
+    const response = await mongodb
+      .getDb()
+      .collection("contacts")
+      .deleteOne({ _id: contactId });
+    if (response.deletedCount > 0) {
+      res.status(200).json({ message: "Contact deleted successfully" });
+    } else {
+      res.status(404).json({ message: "Contact not found" });
+    }
+  } catch (err) {
+    res
+      .status(500)
+      .json({ message: "Error deleting contact", error: err.message });
+  }
+};
 module.exports = {
   getAllcontacts,
   getcontactById,
+  createContact,
+  updateContact,
+  deleteContact,
 };
