# routes/index.js
@@ -1,12 +1,19 @@
 /* eslint-disable no-undef */
 const router = require("express").Router();
 
-
-
 router.get("/", (req, res) => {
+  // #swagger.tags = ['Home']
+  // #swagger.description = 'Home page endpoint'
   res.send("Welcome to the home page!");
 });
 
-router.use("/", require("./contacts"));
+router.use(
+  "/",
+  require("./contacts"),
+  // #swagger.tags = ['Contacts']
+  // #swagger.description = 'Home page endpoint'
+);
+
+router.use("/", require("./swagger"));
 
 module.exports = router;
